updated phases and added MoveMotherNaturePhaseTest and PickCloudPhaseTest